add more accordion with delegation method

--- a/index.html
+++ b/index.html
@@ -66,7 +66,69 @@
         nam natus possimus maxime voluptates optio maiores expedita. Perferendis
         officia molestias non.
       </p>
-    </div>  
+    </div>
+    <div class="delegation">
+      <button class="accordion2">What is html ?</button>
+    <div class="panel2">
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta
+        reiciendis minus architecto veritatis omnis repellendus hic, pariatur
+        nam natus possimus maxime voluptates optio maiores expedita. Perferendis
+        officia molestias non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta
+        reiciendis minus architecto veritatis omnis repellendus hic, pariatur
+        nam natus possimus maxime voluptates optio maiores expedita. Perferendis
+        officia molestias non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta
+        reiciendis minus architecto veritatis omnis repellendus hic, pariatur
+        nam natus possimus maxime voluptates optio maiores expedita. Perferendis
+        officia molestias non.
+      </p>
+    </div>
+    <button class="accordion2">What is html ?</button>
+    <div class="panel2">
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta
+        reiciendis minus architecto veritatis omnis repellendus hic, pariatur
+        nam natus possimus maxime voluptates optio maiores expedita. Perferendis
+        officia molestias non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta
+        reiciendis minus architecto veritatis omnis repellendus hic, pariatur
+        nam natus possimus maxime voluptates optio maiores expedita. Perferendis
+        officia molestias non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta
+        reiciendis minus architecto veritatis omnis repellendus hic, pariatur
+        nam natus possimus maxime voluptates optio maiores expedita. Perferendis
+        officia molestias non.
+      </p>
+    </div>
+    <button class="accordion2">What is html ?</button>
+    <div class="panel2">
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta
+        reiciendis minus architecto veritatis omnis repellendus hic, pariatur
+        nam natus possimus maxime voluptates optio maiores expedita. Perferendis
+        officia molestias non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta
+        reiciendis minus architecto veritatis omnis repellendus hic, pariatur
+        nam natus possimus maxime voluptates optio maiores expedita. Perferendis
+        officia molestias non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta
+        reiciendis minus architecto veritatis omnis repellendus hic, pariatur
+        nam natus possimus maxime voluptates optio maiores expedita. Perferendis
+        officia molestias non.
+      </p>
+    </div>
+    <button class="accordion2">What is html ?</button>
+    <div class="panel2">
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta
+        reiciendis minus architecto veritatis omnis repellendus hic, pariatur
+        nam natus possimus maxime voluptates optio maiores expedita. Perferendis
+        officia molestias non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta
+        reiciendis minus architecto veritatis omnis repellendus hic, pariatur
+        nam natus possimus maxime voluptates optio maiores expedita. Perferendis
+        officia molestias non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque dicta
+        reiciendis minus architecto veritatis omnis repellendus hic, pariatur
+        nam natus possimus maxime voluptates optio maiores expedita. Perferendis
+        officia molestias non.
+      </p>
+    </div>
+    </div>
     <script src="javascript.js"></script>
   </body>
 </html>
